# pi-fzf

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  demo.tape  go.mod  main.go  main_test.go  pi-sessions  pyproject.toml
.github/workflows/: ci.yml
pi_chat_fzf/: cli.py  index.py  preview.py  shell.py
pi_fzf/: cli.py  index.py  preview.py  sessions.py  shell.py
testdata/: assistant_has_keywords.jsonl  empty_session.jsonl  multi_session.jsonl  no_text_content.jsonl  valid_session.jsonl
tests/: conftest.py  test_cli.py  test_index.py  test_preview.py  test_sessions.py  test_shell.py
