[project]
name = "pi-fzf"
version = "0.2.0"
description = "Fuzzy find and resume Pi coding agent sessions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pi-fzf = "pi_fzf.cli:main"

[project.urls]
Homepage = "https://github.com/sasha-computer/pi-fzf"
Repository = "https://github.com/sasha-computer/pi-fzf"
Issues = "https://github.com/sasha-computer/pi-fzf/issues"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "ruff>=0.13.0",
    "ty>=0.0.15",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = []

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["pi_fzf", "tests"]
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ty.rules]
all = "error"
possibly-missing-import = "error"
possibly-missing-attribute = "error"
unresolved-attribute = "error"
unresolved-reference = "error"
